fixed header and 'footer' on main page, both are now always visible, also on smartphones

--- a/css/design.css
+++ b/css/design.css
@@ -1,3 +1,12 @@
+/* fixed header */
+#header {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index: 10;
+}
+
 #logo {
 	height: 250px;
 	width:	250px;
@@ -30,25 +39,35 @@ html {
 	background-image: url("../images/agsquare.png");
 }
 
-#app {
+#app, #mainRun {
 	width: 100%;
 	max-width: 960px;
 	margin: 0 auto;
 }
+#app {
+	margin-top: 64px;
+}
 
-#mainRun {
+#app.mainPage {
+	margin-bottom: 68px;
+}
+
+#footer {
+	position: fixed;
+	bottom: 0px;
+	width: 100%;
+	height: 68px;
+	left: 0px;
+	background-color: white; 
 }
 
 .md-icon-button .s36 {
 	width: 36px;
 	height: 36px;
 }
+
 .md-icon-button .faintIcon {
 	opacity: 0.8;
-}
-
-#languageBar button {
-	z-index: 1;
 }
 
 h1{
@@ -101,13 +120,6 @@ h1{
 
 .notReady {
 	color: rgb(210, 210, 210);
-}
-
-
-@media (min-width: 600px){
-	#footer {
-	  right: 16px;
-	}
 }
 
 .partialContent{
